--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Cardio Reports</h1>
 
-<%= link_to 'New Cardio Report', new_cardio_report_path, class: "btn btn-primary" %>
+<%= link_to 'New Cardio Report', new_cardio_report_path, class: "btn btn-outline-primary" %>
 
 <br><br>
 
