--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Weight Reports</h1>
 
-<%= link_to 'New Weight Report', new_weight_report_path, class: "btn btn-primary" %>
+<%= link_to 'New Weight Report', new_weight_report_path, class: "btn btn-outline-primary" %>
 
 <br><br>
 
