--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Sleep Reports</h1>
 
-<%= link_to 'New Sleep Report', new_sleep_report_path, class: "btn btn-primary" %>&nbsp;
+<%= link_to 'New Sleep Report', new_sleep_report_path, class: "btn btn-outline-primary" %>&nbsp;
 <% if @sleep_reports.latest.complete? %>
   <%= link_to 'Start Sleep', sleep_start_path, method: :post, class: "btn btn-success" %>
 <% else %>
