--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -9,34 +9,36 @@
 
 <br><br>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Asleep</th>
-      <th>Wakeup</th>
-      <th>Duration</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<p>TODO: Fix dates</p>
 
-  <tbody>
-    <% @sleep_reports.ordered_by_recency.reverse.each do |sleep_report| %>
+<% @sleep_reports.ordered_by_recency.reverse.each do |sleep_report| %>
+  <div class="card">
+    <div class="card-header">
+      <%= sleep_report.asleep_at.strftime('%a, %b %d, %Y') %>
+      <div style="float:right;">
+        <%= link_to edit_sleep_report_path(sleep_report) do %>
+          <%= octicon "pencil", :height => 16 %>
+        <% end %>
+        &nbsp;&nbsp;
+        <%= link_to sleep_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <%= octicon "trashcan", :height => 16 %>
+        <% end %>
+      </div>
+    </div>
+    <table class="table" style="margin-bottom: 0; table-layout:fixed">
       <tr>
-        <td><%= sleep_report.asleep_at.strftime('%Y-%m-%d') %></td>
-        <td><%= sleep_report.asleep_at.strftime('%I:%M %p') %></td>
-        <td><%= sleep_report.wakeup_at&.strftime('%I:%M %p') %></td>
-        <td><%= Time.at(sleep_report.duration_seconds).utc.strftime('%H:%M') if sleep_report.complete? %></td>
-        <td nowrap>
-          <%= link_to edit_sleep_report_path(sleep_report) do %>
-            <%= octicon "pencil", :height => 16 %>
-          <% end %>
-          &nbsp;&nbsp;
-          <%= link_to sleep_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
-            <%= octicon "trashcan", :height => 16 %>
-          <% end %>
-        </td>
+        <td>Asleep</td>
+        <td><b><%= sleep_report.asleep_at.strftime('%I:%M %p') %></b></td>
+        <td>Duration</td>
+        <td><b><%= sleep_report.complete? ? Time.at(sleep_report.duration_seconds).utc.strftime('%H:%M') : "N/A" %></b></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tr>
+        <td>Wakeup</td>
+        <td><b><%= sleep_report.wakeup_at.strftime('%I:%M %p')  if sleep_report.complete? %></b></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
+  <br>
+<% end %>
