--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -18,7 +18,7 @@
         <% end %>
       </div>
     </div>
-    <table class="table" style="margin-bottom: 0">
+    <table class="table" style="margin-bottom: 0; table-layout:fixed">
       <tr>
         <td>Duration</td>
         <td><b><%= cardio_report.duration_time.strftime('%M:%S') %></b></td>
