--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -61,6 +61,8 @@
     <br>
     <h2>Charts</h2>
     <hr> 
-    <%= line_chart WeightReport.pluck(:datestamp, :weight_pounds),  min: 160, max: 190 %> 
+    <%= line_chart WeightReport.pluck(:datestamp, :weight_pounds),  min: 160, max: 190 %>
+
+    <div id="container" style="width:100%; height:400px;"></div> 
   </div>
 </div>
