--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -48,20 +48,28 @@
   <div id="charts" class="tab-pane">
     <h2>Statistics</h2>
     <hr>
-    <table>
-      <tr>
-        <td><h3>30-day average: <b></h3></td>
-        <td><h3><b><%= current_average_weight(days=30) %></b> lb</h3></td>
-      </tr>
-      <tr>
-        <td><h3>1-year average: <b></h3></td>
-        <td><h3><b><%= current_average_weight(days=365) %></b> lb</h3></td>
-      </tr>
+    <h3>Averages</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th><b>1-week</b></h5></th>
+          <th><b>1-month</b></h5></th>
+          <th><b>3-months</b></h5></th>
+          <th><b>1-year</b></h5></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><h4><%= current_average_weight(days=7) %></h4></td>
+          <td><h4><%= current_average_weight(days=30) %></h4></td>
+          <td><h4><%= current_average_weight(days=91) %></h4></td>
+          <td><h4><%= current_average_weight(days=365) %></h4></td>
+        </tr>
+      </tbody>
     </table>
-    <br>
-    <h2>Charts</h2>
-    <hr> 
 
+    <h2>Charts</h2>
+    <hr>
     <div id="container" style="width:100%; height:400px;"></div> 
   </div>
 </div>
