--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -9,12 +9,10 @@
 
 <br><br>
 
-<p>TODO: Fix dates</p>
-
 <% @sleep_reports.ordered_by_recency.reverse.each do |sleep_report| %>
   <div class="card">
     <div class="card-header">
-      <%= sleep_report.asleep_at.strftime('%a, %b %d, %Y') %>
+      <%= sleep_report.date.strftime('%a, %b %d, %Y') %>
       <div style="float:right;">
         <%= link_to edit_sleep_report_path(sleep_report) do %>
           <%= octicon "pencil", :height => 16 %>
