Improve navigate back buttons

--- a/app/views/weight_reports/new.html.erb
+++ b/app/views/weight_reports/new.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', weight_report: @weight_report %>
 
-<br>
-<%= link_to 'Back', weight_reports_path, class: "btn btn-outline-primary" %>
+<%= link_to 'Back', weight_reports_path, class: "btn btn-outline-secondary" %>
