--- a/app/views/sleep_reports/new.html.erb
+++ b/app/views/sleep_reports/new.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', sleep_report: @sleep_report %>
 
-<br>
-<%= link_to 'Back', sleep_reports_path, class: "btn btn-outline-primary" %>
+<%= link_to 'Back', sleep_reports_path, class: "btn btn-outline-secondary" %>
