--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -34,11 +34,11 @@
     </table>
     <% if featured?(cardio_report) %>
       <footer class="card-footer text-muted">
-        <% if featured_by_speed?(cardio_report) %>
-          <i>#<%= ranking_by_speed_for_distance(cardio_report) %> fastest speed for distance</i><br>
-        <% end %>
         <% if featured_by_calories?(cardio_report) %>
           <i>#<%= ranking_by_calories(cardio_report) %> most calories burned</i>
+        <% end %>
+        <% if featured_by_speed?(cardio_report) %>
+          <br><i>Fastest <%= '%.1f' % cardio_report.distance_miles %> miles</i>
         <% end %>
       </footer>
     <% end %>
