--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -4,7 +4,7 @@
 
 <br><br>
 
-<% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
+<% @ordered_by_recency.reverse.each do |cardio_report| %>
   <div class="card">
     <div class="card-header <%= 'alert-success' if featured?(cardio_report) %>">
       <%= cardio_report.datestamp.strftime('%a, %b %d, %Y') %>
@@ -44,4 +44,10 @@
     <% end %>
   </div>
   <br>
+  <% if (days_since_previous(cardio_report) || 0) >= 7 %>
+    <div class="card <%= days_since_previous(cardio_report) < 30 ? 'alert-warning' : 'alert-danger' %>" style="text-align:center">
+      <h5 style="margin: 0.5rem 0 0.5rem 0"><b><%= days_since_previous(cardio_report) %></b> days</h5>
+    </div>
+    <br>
+  <% end %>
 <% end %>
