--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -45,29 +45,30 @@
   </div>
 
   <div id="analysis" class="tab-pane">
-    <h2>Statistics</h2>
-    <hr>
-    <h3>Averages</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th><b>1-week</b></h5></th>
-          <th><b>1-month</b></h5></th>
-          <th><b>3-months</b></h5></th>
-          <th><b>1-year</b></h5></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><h4><%= current_average_weight(days=7) %></h4></td>
-          <td><h4><%= current_average_weight(days=30) %></h4></td>
-          <td><h4><%= current_average_weight(days=91) %></h4></td>
-          <td><h4><%= current_average_weight(days=365) %></h4></td>
-        </tr>
-      </tbody>
-    </table>
+    <h2>Averages</h2>
+    <div class="card">
+      <table class="table" style="margin-bottom: 0; table-layout:fixed">
+        <thead>
+          <tr>
+            <th style="text-align:center"><b>1-week</b></h5></th>
+            <th style="text-align:center"><b>1-month</b></h5></th>
+            <th style="text-align:center"><b>3-months</b></h5></th>
+            <th style="text-align:center"><b>1-year</b></h5></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="text-align:center"><h4><%= current_average_weight(days=7) %></h4></td>
+            <td style="text-align:center"><h4><%= current_average_weight(days=30) %></h4></td>
+            <td style="text-align:center"><h4><%= current_average_weight(days=91) %></h4></td>
+            <td style="text-align:center"><h4><%= current_average_weight(days=365) %></h4></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <br>
 
-    <h2>Charts</h2>
+    <h2>Chart</h2>
     <hr>
     <div id="weight-plot" style="width:100%; height:400px;"></div>
   </div>
