Remove calories asterisk

--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -28,7 +28,7 @@
       <tr>
         <td>Distance</td>
         <td><b><%= '%.1f' % cardio_report.distance_miles %></b> miles</td>
-        <td>Calories*</td>
+        <td>Calories</td>
         <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
       </tr>
     </table>
@@ -51,5 +51,3 @@
     <br>
   <% end %>
 <% end %>
-
-<p><i>* Excludes resting calories</i></p>
