--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -11,7 +11,7 @@
 
 <% @sleep_reports.ordered_by_recency.reverse.each do |sleep_report| %>
   <div class="card">
-    <div class="card-header">
+    <div class="card-header <%= color_class(sleep_report) %>">
       <%= sleep_report.date.strftime('%a, %b %d, %Y') %>
       <div style="float:right;">
         <%= link_to edit_sleep_report_path(sleep_report) do %>
