Refactor reminder alert system

--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Weight Reports</h1>
 
+<%= alert_weight_report_reminder %>
+
 <ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link active" href="#table" data-toggle="tab">Reports</a>
