--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Cardio Reports</h1>
 
+<%= alert_cardio_report_reminder %>
+
 <%= link_to 'New Cardio Report', new_cardio_report_path, class: "btn btn-outline-primary" %>
 
 <br><br>
