--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,9 +1,9 @@
 <% flash.each do |key, messages| %>
   <% if messages.instance_of? String %>
-    <div class="<%= flash_class(key) %>"><%= messages %></div>
+    <div class="<%= alert_class(key) %>"><%= messages %></div>
   <% elsif messages.instance_of? Array %>
     <% messages.each do |value| %>
-      <div class="<%= flash_class(key) %>"><%= value %></div>
+      <div class="<%= alert_class(key) %>"><%= value %></div>
     <% end %>
   <% end %>
 <% end %>
