--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-light">
-  <i style="width: 100%; text-align: center">This is a <%= Rails.env %> environment</i>
+  <p style="width: 100%; text-align: center; margin: 0 0 0 0">This is a <%= Rails.env %> environment</p>
 </nav>
