--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -28,7 +28,7 @@
         <td>Asleep</td>
         <td><b><%= sleep_report.asleep_at.strftime('%I:%M %p') %></b></td>
         <td>Duration</td>
-        <td><b><%= sleep_report.complete? ? Time.at(sleep_report.duration_seconds).utc.strftime('%H:%M') : "N/A" %></b></td>
+        <td><b><%= sleep_report.complete? ? sleep_report.strf_duration('%H:%M') : "N/A" %></b></td>
       </tr>
       <tr>
         <td>Wakeup</td>
