--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -40,8 +40,8 @@
   </div>
   <br>
   <% if (days_since_previous(sleep_report) || 0) >= 2 %>
-    <div class="alert alert-secondary" style="text-align:center; background-color: rgba(0, 0, 0, 0.03)">
-      <h5 style="margin: 0 0 0 0"><b><%= days_since_previous(sleep_report) - 1%></b> days</h5>
+    <div class="card" style="text-align:center; background-color: rgba(0, 0, 0, 0.03)">
+      <h5 style="margin: 0.5rem 0 0.5rem 0"><b><%= days_since_previous(sleep_report) - 1%></b> days</h5>
     </div>
     <br>
   <% end %>
