--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -49,21 +49,21 @@
   <div id="analysis" class="tab-pane">
     <h2>Averages</h2>
     <div class="card">
-      <table class="table" style="margin-bottom: 0; table-layout:fixed">
+      <table class="table">
         <thead>
           <tr>
-            <th style="text-align:center"><b>1-week</b></h5></th>
-            <th style="text-align:center"><b>1-month</b></h5></th>
-            <th style="text-align:center"><b>3-months</b></h5></th>
-            <th style="text-align:center"><b>1-year</b></h5></th>
+            <th class="text-center"><b>1-week</b></h5></th>
+            <th class="text-center"><b>1-month</b></h5></th>
+            <th class="text-center"><b>3-months</b></h5></th>
+            <th class="text-center"><b>1-year</b></h5></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td style="text-align:center"><h4><%= current_average_weight(days=7) %></h4></td>
-            <td style="text-align:center"><h4><%= current_average_weight(days=30) %></h4></td>
-            <td style="text-align:center"><h4><%= current_average_weight(days=91) %></h4></td>
-            <td style="text-align:center"><h4><%= current_average_weight(days=365) %></h4></td>
+            <td class="text-center"><h4><%= current_average_weight(days=7) %></h4></td>
+            <td class="text-center"><h4><%= current_average_weight(days=30) %></h4></td>
+            <td class="text-center"><h4><%= current_average_weight(days=91) %></h4></td>
+            <td class="text-center"><h4><%= current_average_weight(days=365) %></h4></td>
           </tr>
         </tbody>
       </table>
