--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,47 @@
 .card {
   .table {
     margin-bottom: 0;
-    table-layout:fixed;
+    table-layout: fixed;
+
+    td {
+      border-top: 0
+    }
   }
+
+  .alert-success, .alert-warning, .alert-danger {
+    border-color: rgba(0, 0, 0, 0.125);
+  }
+}
+
+.card-footer {
+  ul {
+    margin-bottom: 0;
+    padding-left: 16px
+  }
+}
+
+.card-banner {
+  text-align: center;
+  font-size: large;
+
+  p {
+    margin: 0.5rem 0 0.5rem 0;
+  }
+}
+
+.navbar {
+  p {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0;
+  }
+}
+
+.card-cap-bg {
+  background-color: rgba(0, 0, 0, .03)
+}
+
+#weight-plot {
+  width: 100%;
+  height: 400px;
 }
