--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,6 +1,6 @@
 <% flash.each do |level, message| %>
   <nav class="navbar navbar-light text-white <%= color_class(level, true) %>">
-    <p style="width: 100%; text-align: center; margin: 0 0 0 0"><%= message %></p>
+    <p><%= message %></p>
   </nav>
 <% end %>
 <% flash.clear %>
