--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -34,7 +34,12 @@
         <td>Wakeup</td>
         <td><b><%= sleep_report.wakeup_at.strftime('%I:%M %p') if sleep_report.complete? %></b></td>
         <td>Score: </td>
-        <td><b><%= sleep_report.score.round if sleep_report.complete? %></b></td>
+        <td>
+          <% if sleep_report.complete? %>
+            <b><%= sleep_report.score_grade %></b>
+            (<%= sleep_report.score.floor %>%)
+          <% end %>
+        </td>
       </tr>
     </table>
   </div>
