Round sleep score instead of using floor

--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -37,7 +37,7 @@
         <td>
           <% if sleep_report.complete? %>
             <b><%= sleep_report.score_grade %></b>
-            (<%= sleep_report.score.floor %>%)
+            (<%= sleep_report.score.round %>%)
           <% end %>
         </td>
       </tr>
