--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -10,6 +10,11 @@
   <div class="card">
     <div class="card-header <%= 'alert-success' if featured?(cardio_report) %>">
       <%= cardio_report.datestamp.strftime('%a, %b %d, %Y') %>
+      <% if cardio_report.treadmill? %>
+        &nbsp<span class="badge badge-light"><%= image_tag("icons8-treadmill-30.png", size:"15x15", title: "Treadmill") %></span>
+      <% else %>
+        &nbsp<span class="badge badge-light"><%= image_tag("icons8-sun-30.png", size:"15x15",  title: "Outdoors") %></span>
+      <% end %>
       <div class="float-right">
         <%= link_to edit_cardio_report_path(cardio_report) do %>
           <%= octicon "pencil", :height => 16 %>
