Remove italics from title

--- a/app/views/summary/index.html.erb
+++ b/app/views/summary/index.html.erb
@@ -1,4 +1,4 @@
-<h1><b><i>Self-Metrics</i></b></h1>
+<h1><b>Self-Metrics</b></h1>
 
 <%= alert_weight_report_reminder %>
 <%= alert_cardio_report_reminder %>
