--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-  <a class="navbar-brand" href=<%= summary_index_path %>><b><i>Self-Metrics</i><%= nonprod_text %></b></a>
+  <a class="navbar-brand" href=<%= summary_index_path %>><b>Self-Metrics</b></a>
   <% if authenticated? %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText">
       <span class="navbar-toggler-icon"></span>
