--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <%= render "layouts/dev_banner" unless production? %>
     <%= render "layouts/header" %>
     <%= render "layouts/flash" %>
 
