Fix navbar to top of screen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,11 @@
   </head>
 
   <body>
-    <%= render "layouts/dev_banner" unless production? %>
-    <%= render "layouts/header" %>
-    <%= render "layouts/flash" %>
+    <div class='fixed-top'>
+      <%= render "layouts/dev_banner" unless production? %>
+      <%= render "layouts/header" %>
+      <%= render "layouts/flash" %>
+    </div>
 
     <div class="container">
       <%= yield %>
