--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,10 @@
       <%= render "layouts/header" %>
       <%= render "layouts/flash" %>
     </div>
+    <br>
 
+    <div id="header-spacer"></div>
+    <div id="dev-banner-spacer"></div>
     <div class="container">
       <%= yield %>
     </div>
