--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -7,57 +7,7 @@
 <br><br>
 
 <% @ordered_by_recency.reverse.each do |cardio_report| %>
-  <div class="card">
-    <div class="card-header <%= 'alert-success' if featured?(cardio_report) %>">
-      <div class="row">
-        <div class="col text-left">
-          <% if cardio_report.treadmill? %>
-            &nbsp<span class="badge badge-light "><%= image_tag("icons8-treadmill-30.png", size:"15x15", title: "Treadmill") %></span>
-          <% else %>
-            &nbsp<span class="badge badge-light"><%= image_tag("icons8-sun-30.png", size:"15x15",  title: "Outdoors") %></span>
-          <% end %>
-        </div>
-        <div class="col-7 text-center">
-          <%= cardio_report.datestamp.strftime('%a, %b %d, %Y') %>
-        </div>
-        <div class="col text-right">
-          <%= link_to edit_cardio_report_path(cardio_report) do %>
-            <%= octicon "pencil", :height => 16 %>
-          <% end %>
-          &nbsp;&nbsp;
-          <%= link_to cardio_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
-            <%= octicon "trashcan", :height => 16 %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-    <table class="table">
-      <tr>
-        <td>Duration</td>
-        <td><b><%= cardio_report.duration_time.strftime('%M:%S') %></b></td>
-        <td>Speed</td>
-        <td><b><%= '%.1f' % cardio_report.speed %></b> mph</td>
-      </tr>
-      <tr>
-        <td>Distance</td>
-        <td><b><%= '%.1f' % cardio_report.distance_miles %></b> miles</td>
-        <td>Calories</td>
-        <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
-      </tr>
-    </table>
-    <% if featured?(cardio_report) %>
-      <footer class="card-footer text-muted">
-        <ul>
-          <% if featured_by_calories?(cardio_report) %>
-            <li>&#9733; #<%= ranking_by_calories(cardio_report) %> most calories burned</li>
-          <% end %>
-          <% if featured_by_speed?(cardio_report) %>
-            <li>&#9733; Fastest <%= '%.1f' % cardio_report.distance_miles %> miles</li>
-          <% end %>
-        </ul>
-      </footer>
-    <% end %>
-  </div>
+  <%= render 'cardio_card', cardio_report: cardio_report %>
   <br>
   <% if (days_since_previous(cardio_report) || 0) >= 7 %>
     <div class="card card-banner <%= days_since_previous(cardio_report) < 30 ? 'alert-warning' : 'alert-danger' %>">
