--- a/app/views/weight_reports/_form.html.erb
+++ b/app/views/weight_reports/_form.html.erb
@@ -1,10 +1,14 @@
 <%= bootstrap_form_with(model: weight_report, local: true) do |form| %>
-  <%= form.date_select :datestamp, label: "Date" %>
-  <%# form.number_field :weight_pounds, step: :any, style: "width: 100px" %>
+  <label>Date</label>
+  <div class="row">
+    <div class="input-group mb-3 col-lg-4 input-group-lg">
+      <input name="weight_report[datestamp]" class="form-control" type="date">
+    </div>
+  </div>
 
   <label>Weight</label>
   <div class="row">
-    <div class="input-group mb-3 col-md-4 input-group-lg">
+    <div class="input-group mb-3 col-lg-4 input-group-lg">
       <input name="weight_report[weight_pounds]" type="number" class="form-control">
       <div class="input-group-append">
         <span class="input-group-text">pounds</span>
