--- a/app/views/weight_reports/_form.html.erb
+++ b/app/views/weight_reports/_form.html.erb
@@ -15,6 +15,8 @@
       </div>
     </div>
   </div>
-
-  <%= form.submit class: "btn btn-primary" %>
+  
+  <hr>
+  <button type="submit" class="btn btn-primary btn-lg">Create</button>&nbsp;&nbsp;
+  <%= link_to 'Back', weight_reports_path, class: "btn btn-outline-secondary btn-lg" %>
 <% end %>
