--- a/app/views/weight_reports/_form.html.erb
+++ b/app/views/weight_reports/_form.html.erb
@@ -1,22 +1,22 @@
-<%= bootstrap_form_with(model: weight_report, local: true) do |form| %>
+<%= form_for @weight_report do |form| %>
   <label>Date</label>
   <div class="row">
     <div class="input-group mb-3 col-lg-4 input-group-lg">
-      <input name="weight_report[datestamp]" class="form-control" type="date">
+      <%= date_field(:weight_report, :datestamp, class: "form-control") %>
     </div>
   </div>
 
   <label>Weight</label>
   <div class="row">
     <div class="input-group mb-3 col-lg-4 input-group-lg">
-      <input name="weight_report[weight_pounds]" type="number" class="form-control">
+      <%= number_field(:weight_report, :weight_pounds, class: "form-control") %>
       <div class="input-group-append">
         <span class="input-group-text">pounds</span>
       </div>
     </div>
   </div>
-  
+
   <hr>
-  <button type="submit" class="btn btn-primary btn-lg">Create</button>&nbsp;&nbsp;
-  <%= link_to 'Back', weight_reports_path, class: "btn btn-outline-secondary btn-lg" %>
+  <button type="submit" class="btn btn-primary btn-lg">Submit</button>&nbsp;&nbsp;
+  <%= link_to "Back", weight_reports_path, class: "btn btn-outline-secondary btn-lg" %>
 <% end %>
