--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -1,5 +1,11 @@
 <%= bootstrap_form_with(model: cardio_report, local: true) do |form| %>
-  <%= form.date_select :datestamp, label: "Date" %>
+  <label>Date</label>
+  <div class="row">
+    <div class="input-group mb-3 col-lg-4 input-group">
+      <%= date_field(:cardio_report, :datestamp, class: "form-control") %>
+    </div>
+  </div>
+
 
   <%= form.label :duration %>
   <div class="input-group">
@@ -8,11 +14,22 @@
     <%= form.select :part_seconds, options_for_select(0..59, cardio_report.duration_time.sec), hide_label: true, append: "s" %>
   </div>
   
-  <%= form.number_field :distance_miles, label: "Distance", step: :any, append: "miles" %>
+  <label>Distance</label>
+  <div class="row">
+    <div class="input-group mb-3 col-lg-4 input-group">
+      <%= number_field(:cardio_report, :distance_miles, step: 0.1, class: "form-control") %>
+      <div class="input-group-append">
+        <span class="input-group-text">miles</span>
+      </div>
+    </div>
+  </div>
+
 
   <div class="form-group">
     <%= form.check_box :treadmill, label: "Treadmill?", custom: true %>
   </div>
   
-  <%= form.submit class: "btn btn-primary" %>
+  <hr>
+  <button type="submit" class="btn btn-primary btn">Submit</button>&nbsp;&nbsp;
+  <%= link_to "Back", cardio_reports_path, class: "btn btn-outline-secondary btn" %>
 <% end %>
