Add [DEV] label to title in development

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Self-Metrics</title>
+    <title>Self-Metrics<%= " [DEV]" unless production? %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
