Use darker colors for flash messages

--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |level, message| %>
-  <nav id="flashbar" class="navbar <%= color_class(level) %>">
+  <nav id="flashbar" class="navbar text-white <%= color_class(level, true) %>">
     <p><%= message %></p>
   </nav>
 <% end %>
