--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -8,14 +8,19 @@
   
   <label>Duration</label>
   <div class="row">
-    <div class="input-group mb-3 col-lg-4 align-input-right">
-      <%= number_field(:cardio_report, :part_minutes, step: 1, class: "form-control", value: part_minutes(cardio_report)) %>
-      <div class="input-group-append">
-        <span class="input-group-text">m</span>
+    <div class="btn-group mb-3 col-lg-4">
+      <div class="input-group">
+        <%= number_field(:cardio_report, :part_minutes, step: 1, class: "form-control", value: part_minutes(cardio_report)) %>
+        <div class="input-group-append">
+          <span class="input-group-text">minutes</span>
+        </div>
       </div>
-      <%= number_field(:cardio_report, :part_seconds, step: 1, class: "form-control", value: part_seconds(cardio_report)) %>
-      <div class="input-group-append">
-        <span class="input-group-text">s</span>
+      <div style="width: 10%"></div>
+      <div class="input-group">
+        <%= number_field(:cardio_report, :part_seconds, step: 1, class: "form-control", value: part_seconds(cardio_report)) %>
+        <div class="input-group-append">
+          <span class="input-group-text">seconds</span>
+        </div>
       </div>
     </div>
   </div>
