--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_with(model: cardio_report, local: true) do |form| %>
+<%= form_for @cardio_report do |form| %>
   <label>Date</label>
   <div class="row">
     <div class="input-group mb-3 col-lg-4">
