--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -40,10 +40,10 @@
   <div class="row">
     <div class="btn-group btn-group-toggle mb-3 col-lg-4" data-toggle="buttons">
       <label class="btn btn-outline-secondary <%= "active" if cardio_report.treadmill == false %>">
-        <%= radio_button_tag("cardio_report[treadmill]", "0") %> Outdoors
+        <%= radio_button_tag("cardio_report[treadmill]", "0", cardio_report.treadmill == false) %> Outdoors
       </label>
       <label class="btn btn-outline-secondary <%= "active" if cardio_report.treadmill %>">
-        <%= radio_button_tag("cardio_report[treadmill]", "1") %> Treadmill
+        <%= radio_button_tag("cardio_report[treadmill]", "1", cardio_report.treadmill) %> Treadmill
       </label>
     </div>
   </div>
