--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -22,7 +22,8 @@
         <tr>
           <th>Date</th>
           <th>Weight</th>
-          <th colspan="3"></th>
+          <th>EMA</th>
+          <th colspan="4"></th>
         </tr>
       </thead>
 
@@ -31,6 +32,7 @@
           <tr>
             <td><%= weight_report.datestamp.strftime('%Y-%m-%d') %></td>
             <td><b><%= '%.1f' % weight_report.weight_pounds %></b> lb</td>
+            <td><b><%= '%.1f' % @weight_exp_avg_calculator.fetch(weight_report) %></b> lb</td>
             <td nowrap>
               <%= link_to edit_weight_report_path(weight_report) do %>
                 <%= octicon "pencil", :height => 16 %>
