Rename analysis tab to metrics

--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -7,7 +7,7 @@
     <a class="nav-link active" href="#table" data-toggle="tab">Reports</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#analysis" data-toggle="tab" onclick="renderWeightPlot()">Analysis</a>
+    <a class="nav-link" href="#metrics" data-toggle="tab" onclick="renderWeightPlot()">Metrics</a>
   </li>
 </ul>
 <br>
@@ -48,7 +48,7 @@
     </table>
   </div>
 
-  <div id="analysis" class="tab-pane">
+  <div id="metrics" class="tab-pane">
     <h2>Averages</h2>
     <div class="card">
       <table class="table text-center">
