--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -19,14 +19,17 @@
   </div>
   <table class="table">
     <tr>
-      <td>Asleep</td>
-      <td><b><%= sleep_report.asleep_at.strftime('%I:%M %p') %></b></td>
-      <td>Duration</td>
-      <td><b><%= sleep_report.strf_duration('%H:%M') if sleep_report.complete? %></b></td>
+      <td>Range</td>
+      <td>
+        <b><%= sleep_report.asleep_at.strftime('%I:%M') %></b> /
+        <b><%= sleep_report.wakeup_at.strftime('%I:%M') if sleep_report.complete? %></b>
+      </td>
+      <td>Debt</td>
+      <td><b>XXm</b> (XX%)</td>
     </tr>
     <tr>
-      <td>Wakeup</td>
-      <td><b><%= sleep_report.wakeup_at.strftime('%I:%M %p') if sleep_report.complete? %></b></td>
+      <td>Duration</td>
+      <td><b><%= sleep_report.strf_duration('%H:%M') if sleep_report.complete? %></b></td>
       <td>Score: </td>
       <td>
         <% if sleep_report.complete? %>
