--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -19,7 +19,7 @@
   </div>
   <table class="table">
     <tr>
-      <td>Range</td>
+      <td>Times</td>
       <td>
         <b><%= sleep_report.asleep_at.strftime('%I:%M') %></b> /
         <b><%= sleep_report.wakeup_at.strftime('%I:%M') if sleep_report.complete? %></b>
