Rename weight EMA column to Average

--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -22,7 +22,7 @@
         <tr>
           <th>Date</th>
           <th>Weight</th>
-          <th>EMA</th>
+          <th>Average</th>
           <th colspan="4"></th>
         </tr>
       </thead>
