--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -19,24 +19,17 @@
   </div>
   <table class="table">
     <tr>
-      <td>Times</td>
-      <td>
-        <b><%= sleep_report.asleep_at.strftime('%I:%M') %></b> /
-        <b><%= sleep_report.wakeup_at.strftime('%I:%M') if sleep_report.complete? %></b>
-      </td>
-      <td>Score</td>
-      <td>
-        <% if sleep_report.complete? %>
-          <b><%= sleep_report.score_grade %></b> (<%= sleep_report.score.round %>%)
-        <% end %>
-      </td>
+      <td>Asleep at</td>
+      <td><b><%= sleep_report.asleep_at.strftime('%I:%M %p') %></b></td>
+      <td>Duration</td>
+      <td><b><%= sleep_report.strf_duration('%-H:%M') if sleep_report.complete? %></b></td>
     </tr>
     <tr>
-      <td>Duration</td>
-      <td><b><%= sleep_report.strf_duration('%H:%M') if sleep_report.complete? %></b></td>
+      <td>Wakeup at</td>
+      <td><b><%= sleep_report.wakeup_at.strftime('%I:%M %p') if sleep_report.complete? %></b></td>
       <td>Average</td>
       <% if sleep_report.complete? %>
-        <td><b>8:00</b></td>
+        <td><b>N/A</b></td>
       <% end %>
     </tr>
   </table>
