Add cardio alert for calorie sum

--- a/app/views/summary/index.html.erb
+++ b/app/views/summary/index.html.erb
@@ -3,3 +3,4 @@
 <%= alert_weight_report_reminder %>
 <%= alert_cardio_report_reminder %>
 <%= alert_sleep_report_reminder %>
+<%= alert_cardio_report_calories %>
