--- a/app/views/weight_reports/_form.html.erb
+++ b/app/views/weight_reports/_form.html.erb
@@ -2,7 +2,7 @@
   <label>Date</label>
   <div class="row">
     <div class="input-group mb-3 col-lg-4">
-      <%= date_field(:weight_report, :datestamp, class: "form-control") %>
+      <%= date_field(:weight_report, :date, class: "form-control") %>
     </div>
   </div>
 
