--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -7,7 +7,7 @@
 
 <br><br>
 
-<% @ordered_by_recency.reverse.each do |cardio_report| %>
+<% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
   <%= render 'cardio_card', cardio_report: cardio_report %>
   <br>
   <% if (days_since_previous_cardio(cardio_report) || 0) >= 7 %>
