Present sleep average

--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -28,8 +28,8 @@
       <td>Wakeup at</td>
       <td><b><%= sleep_report.wakeup_at.strftime('%I:%M %p') if sleep_report.complete? %></b></td>
       <td>Average</td>
-      <% if sleep_report.complete? %>
-        <td><b>N/A</b></td>
+      <% if sleep_report.complete? &&  @sleep_reports.accuracy(sleep_report) > 0.8 %>
+        <td><b><%= '%.1f' % (@sleep_reports.exp_avg(sleep_report) / 3600) %></b> hours</td>
       <% end %>
     </tr>
   </table>
