--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -19,13 +19,13 @@
   </div>
   <table class="table">
     <tr>
-      <td>Asleep at</td>
+      <td>Asleep</td>
       <td><b><%= sleep_report.asleep_at.strftime('%I:%M %p') %></b></td>
       <td>Duration</td>
       <td><b><%= sleep_report.strf_duration('%-H:%M') if sleep_report.complete? %></b></td>
     </tr>
     <tr>
-      <td>Wakeup at</td>
+      <td>Wakeup</td>
       <td><b><%= sleep_report.wakeup_at.strftime('%I:%M %p') if sleep_report.complete? %></b></td>
       <td>Restfulness</td>
       <% if sleep_report.complete? && @sleep_reports.accuracy(sleep_report) > 0.8 %>
