--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header <%= sleep_color_class(sleep_report) %>">
+  <div class="card-header">
     <div class="row">
       <div class="col text-left">
       </div>
